myweb: fix icon spacing

--- a/test/test/myweb/style.css
+++ b/test/test/myweb/style.css
@@ -41,7 +41,7 @@ p {
 	font-size: 26px;
 	color: black;
 	text-decoration: none;
-	margin: 5px;
+	letter-spacing: 10px;
 }
 
 .sm a:hover {
